NetBSD Problem Report #43605

From www@NetBSD.org  Mon Jul 12 20:54:00 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 859B463BADB
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 12 Jul 2010 20:54:00 +0000 (UTC)
Message-Id: <20100712205400.55AEB63BACE@www.NetBSD.org>
Date: Mon, 12 Jul 2010 20:54:00 +0000 (UTC)
From: pooka@iki.fi
Reply-To: pooka@iki.fi
To: gnats-bugs@NetBSD.org
Subject: tmpfs file handles are broken
X-Send-Pr-Version: www-1.0

>Number:         43605
>Category:       kern
>Synopsis:       tmpfs file handles are broken
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    hannken
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Jul 12 20:55:00 +0000 2010
>Closed-Date:    Sun Apr 03 07:56:45 +0000 2011
>Last-Modified:  Sun Apr 03 07:56:45 +0000 2011
>Originator:     Antti Kantee
>Release:        
>Organization:
>Environment:
>Description:
fhopen() fails with EINVAL on tmpfs (internally speaking, VFS_FHTOVP):

        if (tfh.tf_id >= tmp->tm_nodes_max)
                return EINVAL;

Seems like this was broken ~2.5years ago.   ... nobody noticing this
is funny, considering the fuss there was with the "critical"
importance of nfs export capability in tmpfs.
>How-To-Repeat:
i'll add an atf test soon (it's blocking on an infrastructure issue)
>Fix:

>Release-Note:

>Audit-Trail:
From: Antti Kantee <pooka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43605 CVS commit: src/tests/fs/vfs
Date: Tue, 13 Jul 2010 11:51:59 +0000

 Module Name:	src
 Committed By:	pooka
 Date:		Tue Jul 13 11:51:59 UTC 2010

 Modified Files:
 	src/tests/fs/vfs: Atffile Makefile
 Added Files:
 	src/tests/fs/vfs: t_vfsops.c

 Log Message:
 Add basic tests for vfsops.

 tfilehandle is a test for PR kern/43605


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/tests/fs/vfs/Atffile
 cvs rdiff -u -r1.2 -r1.3 src/tests/fs/vfs/Makefile
 cvs rdiff -u -r0 -r1.1 src/tests/fs/vfs/t_vfsops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: kern-bug-people->hannken
Responsible-Changed-By: hannken@NetBSD.org
Responsible-Changed-When: Sat, 02 Apr 2011 14:09:57 +0000
Responsible-Changed-Why:
I have a fix.


From: "Juergen Hannken-Illjes" <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43605 CVS commit: src
Date: Sat, 2 Apr 2011 14:24:54 +0000

 Module Name:	src
 Committed By:	hannken
 Date:		Sat Apr  2 14:24:53 UTC 2011

 Modified Files:
 	src/sys/fs/tmpfs: tmpfs_vfsops.c
 	src/tests/fs/vfs: t_vfsops.c

 Log Message:
 Fix file handle operations for tmpfs by removing a now bogus test and
 fixing the return value of tmpfs_fhtovp() in the not-found case.

 When vmlocking2 was merged to head (Jan 2008 !!) the inode numbering was
 changed.  Before inodes were numbered 2..tm_nodes_max-1 and after the
 merge the numbers are derived from the nodes memory address.

 Fixes PR #43605 (tmpfs file handles are broken)


 To generate a diff of this commit:
 cvs rdiff -u -r1.46 -r1.47 src/sys/fs/tmpfs/tmpfs_vfsops.c
 cvs rdiff -u -r1.9 -r1.10 src/tests/fs/vfs/t_vfsops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: hannken@NetBSD.org
State-Changed-When: Sun, 03 Apr 2011 07:56:45 +0000
State-Changed-Why:
Fixed in tree.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.